# todo-app-migrated

./: .gitignore  LICENSE  README.md
backend/: .env  .env.example  README.md  pyproject.toml  requirements.txt  todo.db
backend/app/: auth.py  config.py  database.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py  tasks.py
backend/app/core/: auth.py  firebase.py
backend/app/domains/tasks/: models.py  repo.py  router.py  schemas.py
backend/app/routers/: auth.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_tasks.py
frontend/: .env.local.example  .gitignore  README.md  auth.ts  jest.config.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/(protected)/tasks/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/tasks/: layout.tsx  page.tsx
frontend/components/: Header.tsx  SignIn.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  TasksContainer.tsx
frontend/components/__tests__/: TaskForm.test.tsx  TaskItem.test.tsx  TaskList.test.tsx
frontend/components/tasks/: TaskFooter.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  TasksView.tsx
frontend/lib/: api.ts  auth-context.tsx  auth.tsx  firebase.ts  types.ts
frontend/types/: next-auth.d.ts
